--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,11 @@ npm-debug.log
 # secrets files as long as you replace their contents by environment
 # variables.
 /config/*.secret.exs
+/k8s/*
 
 #
 .DS_Store
 *.lock
+*.dump
 *.tar.gz
+app.yaml
